--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
  
 services:
-    apache_1:
+    apache_img_1:
         container_name: ${COMPOSE_PROJECT_NAME}_apache_con_1
         build: ./apache/apache01
         expose:
@@ -9,7 +9,7 @@ services:
         networks:
             public_net:
                 ipv4_address: ${APACHE_1_IP}
-    apache_2:
+    apache_img_2:
         container_name: ${COMPOSE_PROJECT_NAME}_apache_con_2
         build: ./apache/apache02
         expose:
