--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         networks:
             public_net:
                 ipv4_address: ${APACHE_1_IP}
-    apache_img_2:
+    apache__2:
         container_name: ${COMPOSE_PROJECT_NAME}_apache_con_2
         build: ./apache/apache02
         expose:
